Backend: add support for custom mapping file paths and fix missing import; Frontend: file menu and lint fixes

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,15 +1,12 @@
-osc:
-  input_port: 9000
-  output_port: 12000
-  output_ip: "192.168.0.15"
-
-midi:
-  input_port: 0
-  output_port: 1
-
 fastapi:
   port: 8000
-
 logging:
-  level: "INFO"
   file: null
+  level: INFO
+midi:
+  input_port: LCL301201 0
+  output_port: LCL301201 1
+osc:
+  input_port: 9000
+  output_ip: 192.168.100.134
+  output_port: 12000
